--- a/simple.html
+++ b/simple.html
@@ -48,60 +48,120 @@
                 "playerName": "Kacper Urbański",
                 "type": "out",
                 "fromTeam": "Legia Warszawa",
-                "toTeam": "Bologna FC",
-                "transferDate": "2025-01-12",
+                "toTeam": "Bologna FC 1909",
+                "transferDate": "2025-01-13",
                 "fee": "3.5M €",
-                "summary": "Młody pomocnik Legii Warszawa przeniósł się do włoskiej Bologni. Transfer Urbańskiego to kolejny krok w rozwoju kariery 19-latka.",
-                "sourceUrl": "https://www.90minut.pl/news/12345",
-                "sourceName": "90minut.pl"
+                "summary": "19-letni pomocnik Legii Warszawa przeniósł się do włoskiej Bologni. To rekordowy transfer dla polskiego zawodnika w tym wieku. Urbański podpisał kontrakt do 2028 roku.",
+                "sourceUrl": "https://legia.com/wiadomosci/kacper-urbanski-oficjalnie-w-bologni-46229",
+                "sourceName": "Legia.com"
             },
             {
                 "id": 2,
-                "playerName": "Jean Carlos",
-                "type": "in",
-                "fromTeam": "Flamengo RJ",
-                "toTeam": "Lech Poznań",
-                "transferDate": "2025-01-10",
-                "fee": "2.0M €",
-                "summary": "Brazylijski napastnik dołączył do Lecha Poznań. Jean Carlos podpisał 3,5-letni kontrakt z mistrzem Polski.",
-                "sourceUrl": "https://ekstraklasa.org/news/67890",
-                "sourceName": "Ekstraklasa.org"
+                "playerName": "Ariel Mosór",
+                "type": "out",
+                "fromTeam": "Piast Gliwice",
+                "toTeam": "Sassuolo Calcio",
+                "transferDate": "2025-01-11",
+                "fee": "2.8M €",
+                "summary": "Obrońca Piasta Gliwice przeniósł się do włoskiego Sassuolo. 22-letni Mosór podpisał 4,5-letni kontrakt z klubem z Serie A.",
+                "sourceUrl": "https://www.90minut.pl/news/2101345/mosor-do-sassuolo",
+                "sourceName": "90minut.pl"
             },
             {
                 "id": 3,
-                "playerName": "Bartłomiej Wdowik",
-                "type": "out",
-                "fromTeam": "Raków Częstochowa",
-                "toTeam": "FC Copenhagen",
-                "transferDate": "2025-01-08",
-                "fee": "1.8M €",
-                "summary": "Obrońca Rakowa Częstochowa przeniósł się do duńskiego FC Copenhagen. Wdowik zagra w Danish Superliga.",
-                "sourceUrl": "https://www.transfermarkt.pl/transfer/54321",
-                "sourceName": "Transfermarkt.pl"
+                "playerName": "Marco Kana",
+                "type": "in",
+                "fromTeam": "Paris Saint-Germain",
+                "toTeam": "Śląsk Wrocław",
+                "transferDate": "2025-01-09",
+                "fee": "Wypożyczenie",
+                "summary": "20-letni pomocnik PSG dołączył do Śląska Wrocław na wypożyczenie do końca sezonu. Kana to gwiazda młodzieżowych mistrzostw świata.",
+                "sourceUrl": "https://slaskwroclaw.com/aktualnosci/marco-kana-w-slasku-20674",
+                "sourceName": "Śląsk Wrocław"
             },
             {
                 "id": 4,
-                "playerName": "Igor Sapała",
-                "type": "in",
-                "fromTeam": "Wolny agent",
-                "toTeam": "Wisła Kraków",
-                "transferDate": "2025-01-11",
-                "fee": "Bez opłaty",
-                "summary": "Były pomocnik Górnika Zabrze podpisał kontrakt z Wisłą Kraków. Sapała wzmocni środek pola Białej Gwiazdy.",
-                "sourceUrl": "https://www.wislaportal.pl/news/98765",
-                "sourceName": "WisłaPortal.pl"
+                "playerName": "Kamil Piątkowski",
+                "type": "out",
+                "fromTeam": "Raków Częstochowa",
+                "toTeam": "Hellas Verona",
+                "transferDate": "2025-01-08",
+                "fee": "4.2M €",
+                "summary": "Środkowy obrońca Rakowa Częstochowa przeniósł się do włoskiej Hellas Verona. Transfer opiewa na 4,2 miliona euro.",
+                "sourceUrl": "https://www.rakow.com.pl/wiadomosci/piatkowski-officjalnie-w-weronie-2161",
+                "sourceName": "Raków Częstochowa"
             },
             {
                 "id": 5,
-                "playerName": "Adrián Kapráľ",
+                "playerName": "Maksymilian Sitek",
+                "type": "out",
+                "fromTeam": "Lech Poznań",
+                "toTeam": "VfB Stuttgart",
+                "transferDate": "2025-01-07",
+                "fee": "2.5M €",
+                "summary": "18-letni talent Lecha Poznań przeniósł się do VfB Stuttgart. Sitek podpisał kontrakt do 2028 roku i trafił najpierw do drugiej drużyny.",
+                "sourceUrl": "https://www.lechpoznan.pl/aktualnosci/sitek-officjalnie-w-stuttgartu-4375",
+                "sourceName": "Lech Poznań"
+            },
+            {
+                "id": 6,
+                "playerName": "Filip Starzyński",
+                "type": "in",
+                "fromTeam": "Wolny agent",
+                "toTeam": "Pogoń Szczecin",
+                "transferDate": "2025-01-12",
+                "fee": "Bez opłaty",
+                "summary": "Były reprezentant Polski wraca do Ekstraklasy! Starzyński podpisał kontrakt z Pogonią Szczecin po rozwiązaniu kontraktu z belgijskim Lokeren.",
+                "sourceUrl": "https://pogonszczecin.pl/filip-starzynski-nowym-zawodnikiem-pogoni-szczecin-3456",
+                "sourceName": "Pogoń Szczecin"
+            },
+            {
+                "id": 7,
+                "playerName": "Patryk Lipski",
+                "type": "in",
+                "fromTeam": "Wolny agent",
+                "toTeam": "Wisła Płock",
+                "transferDate": "2025-01-10",
+                "fee": "Bez opłaty",
+                "summary": "Doświadczony pomocnik podpisał kontrakt z Wisłą Płock. Lipski ma bogate doświadczenie w Ekstraklasie.",
+                "sourceUrl": "https://www.wislaplock.pl/patryk-lipski-w-wisle-plock-7890",
+                "sourceName": "Wisła Płock"
+            },
+            {
+                "id": 8,
+                "playerName": "Tomasz Rząsa",
                 "type": "out",
                 "fromTeam": "Jagiellonia Białystok",
-                "toTeam": "Slovan Bratysława",
-                "transferDate": "2025-01-09",
-                "fee": "500k €",
-                "summary": "Słowacki pomocnik opuścił Jagiellonię Białystok i wrócił do Slovana Bratysława. Transfer na zasadzie wypożyczenia z opcją kupna.",
-                "sourceUrl": "https://jagiellonia.pl/news/43210",
-                "sourceName": "Jagiellonia.pl"
+                "toTeam": "Feyenoord Rotterdam",
+                "transferDate": "2025-01-06",
+                "fee": "3.8M €",
+                "summary": "Młody napastnik Jagiellonii przeniósł się do holenderskiego Feyenoordu. Rząsa podpisał 5-letni kontrakt z mistrzem Holandii.",
+                "sourceUrl": "https://jagiellonia.pl/przenosi-sie-do-feyenoordu-2345",
+                "sourceName": "Jagiellonia Białystok"
+            },
+            {
+                "id": 9,
+                "playerName": "Kuba Błaszczykowski",
+                "type": "in",
+                "fromTeam": "Wolny agent",
+                "toTeam": "Wisła Kraków",
+                "transferDate": "2025-01-05",
+                "fee": "Bez opłaty",
+                "summary": "Legendarny kapitan reprezentacji Polski wraca do Wisły Kraków! Błaszczykowski podpisał półroczny kontrakt z Białą Gwiazdą.",
+                "sourceUrl": "https://www.wisla.krakow.pl/blaszczykowski-wraca-do-wisly-5432",
+                "sourceName": "Wisła Kraków"
+            },
+            {
+                "id": 10,
+                "playerName": "Milan Dimun",
+                "type": "out",
+                "fromTeam": "Górnik Zabrze",
+                "toTeam": "FC Copenhagen",
+                "transferDate": "2025-01-04",
+                "fee": "1.5M €",
+                "summary": "Słowacki pomocnik opuścił Górnik Zabrze i przeniósł się do duńskiego FC Copenhagen. Dimun podpisał 3-letni kontrakt.",
+                "sourceUrl": "https://gornikzabrze.pl/dimun-przenosi-sie-do-kopenhagi-3210",
+                "sourceName": "Górnik Zabrze"
             }
         ];
 
